methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:30: error: not found: type color
def faireV(c:color) {
             ^MethodsPicture:31: error: not found: type color
    setCouleurBrosse(c:color); faireV();
                       ^