methods.picture.MethodsPicture.scala.code
override def run() {
  for (compteur <-1 to 3) {
    ligne();
  }
}


def ligne() {
  for (compteur <-1 to 3) {
    carre(); 
    for (compteur <- 1 to 7) {
      forward();
    }
  }
  for (compteur <-1 to 14 ) {
    backward();
  }
  left();
  for (compteur <- 1 to 7) {
    forward();
  }
  right();
}

def carre() {
  forward();
  faireV(Color.YELLOW); forward; forward(); left(); forward(); faireV(Color.RED); forward; forward(); left(); forward(); faireV(Color.BLUE); forward; forward(); left(); forward(); faireV(Color.GREEN); forward; forward(); left(); forward(); backward();
}

def faireV(c:color) {
    setCouleurBrosse(c:color); faireV();
}

def faireV() {
    forward(); brushDown(); brushUp(); left(); forward(); right(); forward(); brushDown(); brushUp(); forward(); right(); forward(); brushDown(); brushUp(); left();
}